--- a/exemple01/frames.css
+++ b/exemple01/frames.css
@@ -3,8 +3,7 @@ html,body{
     padding:0;
     width:100%;
     height:100%;
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: crisp-edges;
+    image-rendering: pixelated;
     font-family: monospace;
 }
 body{
